--- a/index.html
+++ b/index.html
@@ -1,28 +1,84 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:abuzarbd@gmail.com">email</a></li>
-        		<li><a href="https://github.com/abuzarbd">github.com/abuzarbd</a></li>
-			</ul>
-		</footer>
-	</body>
+<head>
+	<meta name="viewport" content="width=device-width" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Abuzar.ml</title>
+	<link rel="stylesheet" href="/" />
+	<style>
+html {
+	background: #f1f1f1;
+	margin: 0 20px;
+}
+
+body {
+	background: #fff;
+	color: #444;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: 25px auto 25px;
+	padding: 20px 20px 10px 20px;
+	max-width: 700px;
+	-webkit-font-smoothing: subpixel-antialiased;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.13);
+}
+
+a {
+	color: #0073aa;
+}
+
+a:hover,
+a:active {
+	color: #00a0d2;
+}
+
+a:focus {
+	color: #124964;
+	box-shadow:
+		0 0 0 1px #5b9dd9,
+		0 0 2px 1px rgba(30, 140, 190, .8);
+}
+
+h1, h2 {
+	border-bottom: 1px solid #ddd;
+	clear: both;
+	color: #666;
+	font-size: 20px;
+	padding: 0;
+	padding-bottom: 7px;
+	font-weight: 400;
+}
+
+h3 {
+	font-size: 16px;
+}
+
+p, li, dd, dt {
+	padding-bottom: 2px;
+	font-size: 14px;
+	line-height: 1.5;
+}
+
+ul, ol, dl {
+	padding: 5px 5px 5px 22px;
+}
+
+a img {
+	border:0
+}
+
+	</style>
+</head>
+<body>
+<center><font size=" 20px">Abuzar.ml</font></center>
+<p style="text-align: center">Personal Publishing Platform</p>
+
+<h2>About Me</h2>
+<p>Welcome. My name is Abuzar Gifary. I am a student from Bangladesh. My hobby is web developing and blogging. This is my info site.</p>
+<p style="text-align: right">&#8212; Abuzar Gifary</p>
+
+<h2>Server Info</h2>
+<p>This website is hosted by github and domain provided by freenom.</p>
+
+<h3>Copyright © 2020 Abuzar.ml
+</body>
 </html>
