--- a/index.html
+++ b/index.html
@@ -1,84 +1,44 @@
 <!DOCTYPE html>
-<html>
+<!--head tag starts-->
 <head>
-	<meta name="viewport" content="width=device-width" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Abuzar.ml</title>
-	<link rel="stylesheet" href="/" />
-	<style>
-html {
-	background: #f1f1f1;
-	margin: 0 20px;
-}
-
-body {
-	background: #fff;
-	color: #444;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	margin: 25px auto 25px;
-	padding: 20px 20px 10px 20px;
-	max-width: 700px;
-	-webkit-font-smoothing: subpixel-antialiased;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.13);
-}
-
-a {
-	color: #0073aa;
-}
-
-a:hover,
-a:active {
-	color: #00a0d2;
-}
-
-a:focus {
-	color: #124964;
-	box-shadow:
-		0 0 0 1px #5b9dd9,
-		0 0 2px 1px rgba(30, 140, 190, .8);
-}
-
-h1, h2 {
-	border-bottom: 1px solid #ddd;
-	clear: both;
-	color: #666;
-	font-size: 20px;
-	padding: 0;
-	padding-bottom: 7px;
-	font-weight: 400;
-}
-
-h3 {
-	font-size: 16px;
-}
-
-p, li, dd, dt {
-	padding-bottom: 2px;
-	font-size: 14px;
-	line-height: 1.5;
-}
-
-ul, ol, dl {
-	padding: 5px 5px 5px 22px;
-}
-
-a img {
-	border:0
-}
-
-	</style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/style.css" type="text/css"/>
+<link rel="shortcut icon" href="images/favicon.png" type="images/x-png"/>
+<title>abuzar.ml</title>
+<meta name="keywords" content="">
+<meta name="description" content="">
 </head>
+
 <body>
-<center><font size=" 20px">Abuzar.ml</font></center>
-<p style="text-align: center">Personal Publishing Platform</p>
+<div id="wrap">
+<div class="header"><a href="/">abuzar.ml</a> </div>
+<!--header end-->
 
-<h2>About Me</h2>
-<p>Welcome. My name is Abuzar Gifary. I am a student from Bangladesh. My hobby is web developing and blogging. This is my info site.</p>
-<p style="text-align: right">&#8212; Abuzar Gifary</p>
+<div class="bookmark">Welcome to Our Site! View Some Quick Links!<br/><a href="#">Bhoot.Com</a> | <a href="#">Sunday Suspense</a> | <a href="#">Blog</a></div>
 
-<h2>Server Info</h2>
-<p>This website is hosted by github and domain provided by freenom.</p>
+<div class='search'>
+<form action='?'>
+	<input type='text' name='search' value=''>
+	<input type='submit' value='Search'>
+</form>
+</div>
+<div class="title2">About Me</div>
+<div class='text'>Welcome. My name is Abuzar Gifary. I am a student from Bangladesh. My hobby is web developing and blogging. This is my info site.</div>
 
-<h3>Copyright © 2020 Abuzar.ml
+<div class="title2">Our Services</div>
+
+<div class="content2"><a href="/contact.html"><img src="/images/gdir.gif" alt="."/>&nbsp;Contact</a></div>
+
+<div class="content"><a href="/bhoot-com.html"><img src="/images/gdir.gif" alt="."/>&nbsp;Bhoot.Com</a></div>
+
+<div class="content2"><a href="/sunday-suspence.html"><img src="/images/gdir.gif" alt="."/>&nbsp;Sunday Suspense</a></div>
+
+<!--footer start-->
+<div class="footer"><a herf="http://facebook.com/abuzargif">Facebook</a> | <a herf="http://twitter.com/abuzarbd">Twitter</a> | <a herf="http://instagram.com/abuzar009">Instagram</a></div>
+<div class="vs">Personal Publishing Platform<br/>
+&#169; 2020 <a href='/'>abuzar.ml</a> </div>
+</div>
+
 </body>
-</html>
+</html> 
