--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta name="viewport" content="width=device-width" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Abuzar.ml</title>
+	<meta name="description" content="">
+	<meta name="keywords" content="">
+<style>
 
-	<style>
 html {
 	background: #f1f1f1;
 	margin: 0 20px;
@@ -16,12 +18,14 @@ body {
 	color: #444;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	margin: 25px auto 25px;
-	padding: 20px 20px 10px 20px;
+	padding: 20px 20px 20px 20px;
 	max-width: 700px;
 	-webkit-font-smoothing: subpixel-antialiased;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.13);
-}
 
+	-webkit-border-radius: 1em;
+	border-radius: 1em;
+}
 
 a:link, a:active, a:visited {color: #b30000;
 text-decoration: none;
@@ -53,75 +57,44 @@ p, li, dd, dt {
 	line-height: 1.5;
 }
 
-ul, ol, dl {
-	padding: 5px 5px 5px 22px;
-}
-
-a img {
-	border:0
-}
-
-
-.title { padding: 6px;
-color: #FFF;
+.dl {
+text-align:center;
+-webkit-border-radius: 0.3em;
+border-radius: 0.3em;
+padding: 7px;
+color: #fff;
+background-color: #b30000;
 font-weight: bold;
-margin: 0px;
-font-size: 14px;
-background-color: #3cb371;
 }
 
-.content {
-padding: 6px;
+.dl a { color: #fff;
+}
+
+.live {padding: 6px;
 color: #444;
 font-weight: bold;
 margin: 0px;
-font-size: 14px;
+font-size: 15px;
 background-color: #f1f1f1;
-border-bottom: 0.5px solid #444;
+text-align:center;
+-webkit-border-radius: 0.3em;
+border-radius: 0.3em;
+padding: 20px;
 }
-	</style>
+
+</style>
 </head>
 <body>
 <center><font size=" 18px">Abuzar.ml</font></center>
-<p style="text-align: center">Personal Publishing Platform</p>
+<h2><p style="text-align: center">Personal Reading Platform</p></h2>
 
-<h2>About</h2>
-<p>Welcome. My name is Abuzar Gifary. I am a student from Bangladesh. My hobby is web developing and blogging. This is my info site.</p>
-<p style="text-align: right">&#8212; Abuzar Gifary</p>
+<!--header end-->
 
-<h2>Contact</h2>
-<p>7010, Kumarkhali, Kushtia, Bangladesh.</p>
-<p>Email: abuzarbd24@gmail.com</p>
-<p><a herf="http://facebook.com/abuzargif">Facebook</a> | <a herf="http://twitter.com/abuzarbd">Twitter</a> | <a herf="http://instagram.com/abuzar009">Instagram</a> | <a herf="http://github.com/abuzarbd">Github</a></p>
+<div class="live"><div class="dl"><a href="/shonar-kella.html">Shonar Kella</div></div>
 
+<!--footer start-->
 
-<h2>Downloads</h2>
-<div class="title">Sunday Suspense</div>
-<div class="content"><a href="#">Byomkesh Bakshi</a></div>
-<div class="content"><a href="#">Chander Pahar</a></div>
-<div class="content"><a href="#">Feluda</a></div>
-<div class="content"><a href="#">Professor Shonku</a></div>
-<div class="content"><a href="#">Sherlock Holmes</a></div>
-<div class="content"><a href="#">Tumi Sondharo Megh</a></div>
-
-<br/>
-
-<div class="title">Extra Links</div>
-<div class="content"><a href="#">Bangla Audio Quran</a></div>
-<div class="content"><a href="#">Bhoot.Com Episodes</a></div>
-<div class="content"><a href="#">Ramadan Calender</a></div>
-
-<br/>
-
-<div class="title">Books</div>
-<div class="content"><a href="#">Faluda Txt Books</a></div>
-<div class="content"><a href="#">Sharlok Homes Samagra Pdf</a></div>
-<div class="content"><a href="#">Shonku Shamagra Pdf</a></div>
-
-<h2>Server Info</h2>
-<p>This website is hosted by github and domain provided by freenom.</p>
-
-<h3>Copyright © 2020 Abuzar.ml</h3>
-
+<p align="center"><a href="http://facebook.com/abuzargif"><font color="#444">Facebook</font></a> | <a href="<a href="http://twitter.com/abuzarbd"><font color="#444">Twitter</font></a> | <a href="<a href="http://instagram.com/abuzar009"><font color="#444">Instagram</font></a></p>
+<div class="live">Copyright © 2020 Abuzar Gifary</div>
 </body>
 </html>
