--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@ padding: 20px;
 
 <!--footer start-->
 
-<p align="center"><a href="http://facebook.com/abuzargif"><font color="#444">Facebook</font></a> | <a href="<a href="http://twitter.com/abuzarbd"><font color="#444">Twitter</font></a> | <a href="<a href="http://instagram.com/abuzar009"><font color="#444">Instagram</font></a></p>
-<div class="live">Copyright © 2020 Abuzar Gifary</div>
+<div class="live">Copyright © 2020 Abuzar</div>
 </body>
 </html>
