--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<meta name="viewport" content="width=device-width" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Abuzar.ml</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
 <style>
 
 html {
@@ -90,8 +88,12 @@ padding: 20px;
 
 <!--header end-->
 
-<div class="live"><div class="dl"><a href="/shonar-kella-feluda.html">Shonar Kella</div></div>
-<br/>
+<div class="live"><div class="dl"><a href="/shonar-kella.html">Shonar Kella</div></div>
+<br/ >
+
+<div class="live"><div class="dl"><a href="/london-e-feluda.html">London-e Feluda</div></div>
+<br/ >
+
 <!--footer start-->
 
 <div class="live">Copyright © 2020 Abuzar</div>
