--- a/index.html
+++ b/index.html
@@ -88,10 +88,13 @@ padding: 20px;
 
 <!--header end-->
 
-<div class="live"><div class="dl"><a href="/shonar-kella.html">Shonar Kella</div></div>
+<div class="live"><div class="dl"><a href="/shonar-kella-feluda.html">সোনার কেল্লা</div></div>
 <br/ >
 
-<div class="live"><div class="dl"><a href="/london-e-feluda.html">London-e Feluda</div></div>
+<div class="live"><div class="dl"><a href="/london-e-feluda.html">লন্ডনে ফেলুদা</div></div>
+<br/ >
+
+<div class="live"><div class="dl"><a href="/kailash-chowdhury-r-pathar-feluda.html">কৈলাস চৌধুরীর পাথর</div></div>
 <br/ >
 
 <!--footer start-->
