--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body{
     <div class="container">
         <div class="wrapper">
             <h1>Play your favorite music</h1>
-            <img src="https://i.pinimg.com/originals/b4/75/00/b4750046d94fed05d00dd849aa5f0ab7.jpg">
+            <img src="/118405558_144830660639150_8955528402904541273_n.jpg">
             <input id="range" class="level" type="range" value="0" min="0">
             <div class="buttons">
                 <button id="pre"><img src="rewind.png"></button>
