--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body{
 <body>
     <div class="container">
         <div class="wrapper">
-            <h1>Play your favorite music</h1>
+            <h1>Dishergarh Ey Dishehara</h1>
             <img src="/118405558_144830660639150_8955528402904541273_n.jpg">
             <input id="range" class="level" type="range" value="0" min="0">
             <div class="buttons">
