--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body{
     </div>
     <script src="main.js"></script>
 <script>
-music_name = "https://www.bensound.com/bensound-music/bensound-summer.mp3"
+music_name = "/Akritagya - Achintya Kumar Sengupta.mp3"
 let play_btn = document.querySelector("#play");
 let prev_btn = document.querySelector("#pre");
 let next_btn = document.querySelector("#next");
