--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body{
     </div>
     <script src="main.js"></script>
 <script>
-music_name = "/Akritagya - Achintya Kumar Sengupta.mp3"
+music_name = "https://drive.google.com/uc?export=download&id=13CMQUsp-9d15V8tMmjchUL09hO82JV2b"
 let play_btn = document.querySelector("#play");
 let prev_btn = document.querySelector("#pre");
 let next_btn = document.querySelector("#next");
