--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </body>
     <script type="text/javascript">
     
-        var songs = ["savage_love.mp3","Song2.mp3","Song3.mp3"];
+        var songs = ["https://drive.google.com/uc?id=1cTpwCLGKaYxelqhWgDigqmSb-AcfL6bh","Song2.mp3","Song3.mp3"];
         var poster = ["Poster1.jpg","Poster2.jpg","Poster3.jpg"];
         
         var songTitle = document.getElementById("songTitle");
