--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script async src="https://telegram.org/js/telegram-widget.js?11" data-telegram-post="feludacollection/3" data-width="100%"></script>
+<h1><a href="https://bethehero.ff.garena.com/share?code=pW46AXdPKqmw0rq4MpgHkxl3nzearkvg">Click</a></h1>
