--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1><a href="https://bethehero.ff.garena.com/share?code=pW46AXdPKqmw0rq4MpgHkxl3nzearkvg">Click</a></h1>
+<html>
+<head>
+<meta name="viewport" content="width=device-width" />
+</head>
+<body>
+<h1 align="center"><a href="https://bethehero.ff.garena.com/share?code=pW46AXdPKqmw0rq4MpgHkxl3nzearkvg">Click</a></h1>
+</body>
+</html>
