--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>ফেলুদা কালেকশন</title>
+	<title>Free Fire - Jai is available for free!</title>
 <style>
 
 html {
@@ -79,13 +79,13 @@ padding: 20px;
 </style>
 </head>
 <body>
-<center><font size=" 18px">ফেলুদা</font></center>
-<h2><p style="text-align: center">Public Reading Platform</p></h2>
+<center><font size=" 18px">Free Fire</font></center>
+<h2><p style="text-align: center">Jai is available for free!</p></h2>
 
 <!--header end-->
 
 <div class="live"><div class="dl">
-<a href="https://bethehero.ff.garena.com/share?code=Q6J2aL98K35xEaG2KPEf4xYjrqgeO4GE"></a>
+<a href="https://bethehero.ff.garena.com/share?code=Q6J2aL98K35xEaG2KPEf4xYjrqgeO4GE">Get Now!</a>
 </div></div>
 <br/ >
 
