--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@ h3 {
 	font-size: 16px;
 }
 
-
-
 .dl {
 text-align:center;
 -webkit-border-radius: 0.3em;
@@ -79,6 +77,7 @@ padding: 20px;
 </style>
 </head>
 <body>
+
 <center><font size=" 18px">Free Fire</font></center>
 <h2><p style="text-align: center">Jai is available for free!</p></h2>
 
@@ -89,5 +88,8 @@ padding: 20px;
 </div></div>
 <br/ >
 
+<!--footer start-->
+
+<div class="live">Copyright © 2020 Abuzar.ml</div>
 </body>
 </html>
