--- a/index.html
+++ b/index.html
@@ -84,12 +84,9 @@ padding: 20px;
 <!--header end-->
 
 <div class="live"><div class="dl">
-<a href="https://bethehero.ff.garena.com/share?code=Q6J2aL98K35xEaG2KPEf4xYjrqgeO4GE">Get Now!</a>
+<a href="https://bethehero.ff.garena.com/share?code=Q6J2aL98K35xEaG2KPEf4xYjrqgeO4GE">Get Now</a>
 </div></div>
 <br/ >
 
-<!--footer start-->
-
-<div class="live">Copyright © 2020 Abuzar.ml</div>
 </body>
 </html>
