--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Free Fire - Jai is available for free!</title>
+	<title>Free Fire - Crack The Safe!</title>
 <style>
 
 html {
@@ -79,12 +79,12 @@ padding: 20px;
 <body>
 
 <center><font size=" 18px">Free Fire</font></center>
-<h2><p style="text-align: center">Jai is available for free!</p></h2>
+<h2><p style="text-align: center">Crack The Safe!</p></h2>
 
 <!--header end-->
 
 <div class="live"><div class="dl">
-<a href="https://bethehero.ff.garena.com/share?code=aPVklK1j9vGRmWb9KeqCVNJ24bpd8B0m">Get Now</a>
+<a href="https://crackthesafe.ff.garena.com/in?language=en&region=in&code=pdE4Rm6QVOnjwmJD">Get Now</a>
 </div></div>
 <br/ >
 
